ading hello world button

--- a/index.html
+++ b/index.html
@@ -220,5 +220,7 @@
 				<button type="button" class="action">Get Started</button>
 			</div>
 		</div>
+
+		<button>Hello world</button>
 	</body>
 </html>
